--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <h1>Responda e Ganhe!<br><span>Após a compra de uma boneca</span></h1>
             <p class="subtitulo">Participe do nosso questionário e ganhe um <span class="destacado">brinde</span><br><gam>Escolha entre um <span class="item">prendedor</span> ou um <span class="item">laço</span></gam></p>
             <div class="qr-code">
-                <img src="C:\Users\thiag\OneDrive\Área de Trabalho\qr\aricanduvaqr.png" alt="QR Code">
+                <img src="aricanduvaqr.png" alt="QR Code">
             </div>
             <p class="chamada">É fácil e rápido!</p>
         </div>
@@ -109,7 +109,7 @@
             <h1>Responda e Ganhe!<br><span>Após a compra de uma boneca</span></h1>
             <p class="subtitulo">Participe do nosso questionário e ganhe um <span class="destacado">brinde</span><br><gam>Escolha entre um <span class="item">prendedor</span> ou um <span class="item">laço</span></gam></p>
             <div class="qr-code">
-                <img src="C:\Users\thiag\OneDrive\Área de Trabalho\qr\analiaqr.png" alt="QR Code">
+                <img src="analiaqr.png" alt="QR Code">
             </div>
             <p class="chamada">É fácil e rápido!</p>
         </div>
